Add READMe file

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Tranining</title>
+        <!--website icon-->
         <link rel="icon" href="images/291684.png">
-        <link rel="stylesheet" href="css/normalize.css" />
+        <!--Normalize library-->
+        <link rel="stylesheet" href="css/normalize.css">
+        <!--font awesome library-->
         <link rel='stylesheet' href='css/all.min.css'>
+        <!--css file-->
         <link rel='stylesheet' href='css/style.css'>
+        <!--google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet">
@@ -542,25 +547,25 @@
                         <div class="skill">
                             <h3>Html <span>80%</span></h3>
                             <div class="progress">
-                                <span style="width: 80%"></span>
+                                <span style="width: 0" data-width="80%"></span>
                             </div>
                         </div>
                         <div class="skill">
                             <h3>CSS <span>85%</span></h3>
                             <div class="progress">
-                                <span style="width: 85%"></span>
+                                <span style="width: 0" data-width="85%"></span>
                             </div>
                         </div>
                         <div class="skill">
                             <h3>JavaScript <span>70%</span></h3>
                             <div class="progress">
-                                <span style="width: 70%"></span>
+                                <span style="width: 0" data-width="70%"></span>
                             </div>
                         </div>
                         <div class="skill">
                             <h3>Python <span>80%</span></h3>
                             <div class="progress">
-                                <span style="width: 80%"></span>
+                                <span style="width: 0" data-width="80%"></span>
                             </div>
                         </div>
                     </div>
@@ -837,5 +842,6 @@
             <p class="copyright">Made with <i class="fa-solid fa-heart"></i></p>
         </footer>
         <!--end footer-->
+        <script src="js/main.js"></script>
     </body>
 </html>
